--- a/src/app/sites/contact/contact.component.html
+++ b/src/app/sites/contact/contact.component.html
@@ -1,163 +1,223 @@
 <div class="view view-page-header">
-    <div class="full-bg-img">
-      <div class="mask flex-center rgba-blue-strong">
-        <div class="container flex-center">
-          <div class="white-text wow fadeIn header-page-container">
-  
-            <h2 class="header-page">Kontakt</h2>
-  
-          </div>
+  <div class="full-bg-img">
+    <div class="mask flex-center rgba-blue-strong">
+      <div class="container flex-center">
+        <div class="white-text wow fadeIn header-page-container">
+          <h2 class="header-page">Kontakt</h2>
         </div>
       </div>
     </div>
   </div>
-  
-  <div class="py-5 mt-3 page-container">
-  
-    <div class="container">
-      
-      <div class="row">
-  
-        <!-- page content start -->
-        
-        <!--Section: Contact v.1-->
-  
+</div>
+
+<div class="py-5 mt-3 page-container">
+  <div class="container">
+    <div class="row text-center">
+      <h2>Kontakt w sprawach studiów</h2>
+    </div>
+
+    <div class="row text-center persons">
+      <div class="col-md-4">
+        <a
+          mdbBtn
+          floating="true"
+          color="blue"
+          class="icon accent-1 waves-light"
+          mdbWavesEffect
+        >
+          <i class="fa fa-user"></i>
+        </a>
+        <p class="name">mgr inż. <b>Renata Fularska</b></p>
+        <p>
+          <b
+            >Kierownik Administracyjny Wydziału Elektrotechniki i Informatyki</b
+          >
+        </p>
+        <p>Rekrutacja i zasady przyjęć.</p>
+        <p>
+          Budynek A, pok. 104<br />
+          Tel. +48 17 865 12 89<br />
+          Fax. +48 17 854 20 88<br />
+          E-mail: <a href="mailto:dwe@prz.edu.pl">dwe@prz.edu.pl</a>
+        </p>
+      </div>
+
+      <div class="col-md-4">
+        <a
+          mdbBtn
+          floating="true"
+          color="blue"
+          class="icon accent-1 waves-light"
+          mdbWavesEffect
+        >
+          <i class="fa fa-user"></i>
+        </a>
+        <p class="name">mgr inż. <b>Beata Szczęsna</b></p>
+        <p>
+          <b
+            >Starszy referent ds. toku studiów Wydziału Elektrotechniki i
+            Informatyki</b
+          >
+        </p>
+        <p>Rekrutacja i bieżąca obsługa studentów.</p>
+        <p>
+          Budynek A, pok. 110<br />
+          Tel. +48 17 865 12 32<br />
+          Fax. +48 17 854 20 88<br />
+          E-mail: <a href="mailto:bs@prz.edu.pl">bs@prz.edu.pl</a>
+        </p>
+      </div>
+
+      <div class="col-md-4">
+        <a
+          mdbBtn
+          floating="true"
+          color="blue"
+          class="icon accent-1 waves-light"
+          mdbWavesEffect
+        >
+          <i class="fa fa-user"></i>
+        </a>
+        <p class="name">dr hab. inż. <b>Jan Prokop</b>, prof. PRz</p>
+        <p><b>Kierownik Studiów Podyplomowych "Technologie Internetowe"</b></p>
+        <p>Kontakt w zakresie planu studiów i programów przedmiotów.</p>
+        <p>
+          Budynek B, pok. 101<br />
+          Tel. +48 17 865 13 84<br />
+          Fax. +48 17 854 20 88<br />
+          E-mail: <a href="mailto:jprokop@prz.edu.pl">jprokop@prz.edu.pl</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="row pt-4" id="form-map">
+      <!-- page content start -->
+
+      <!--Section: Contact v.1-->
+
       <!--Grid column my-4-->
       <div class="col-lg-5">
-  
         <!--Form with header-->
         <mdb-card>
-  
           <mdb-card-body>
             <!--Header-->
             <div class="form-header accent-1">
               <h4>
                 <!-- <i class="fa fa-envelope"></i> -->
-                Formularz kontaktowy</h4>
+                Formularz kontaktowy
+              </h4>
             </div>
-  
+
             <!--Body-->
             <div class="md-form">
               <i class="fa fa-user prefix grey-text"></i>
-              <input mdbInputDirective type="text" id="form3" class="form-control">
+              <input
+                mdbInputDirective
+                type="text"
+                id="form3"
+                class="form-control"
+              />
               <label for="form3">Imię i Nazwisko</label>
             </div>
-  
+
             <div class="md-form">
               <i class="fa fa-envelope prefix grey-text"></i>
-              <input mdbInputDirective type="text" id="form2" class="form-control">
+              <input
+                mdbInputDirective
+                type="text"
+                id="form2"
+                class="form-control"
+              />
               <label for="form2">Email</label>
             </div>
 
             <div class="md-form">
-                <i class="fa fa-phone prefix grey-text"></i>
-                <input mdbInputDirective type="text" id="form2" class="form-control">
-                <label for="form2">Telefon</label>
-              </div>
-  
+              <i class="fa fa-phone prefix grey-text"></i>
+              <input
+                mdbInputDirective
+                type="text"
+                id="form2"
+                class="form-control"
+              />
+              <label for="form2">Telefon</label>
+            </div>
+
             <div class="md-form">
               <i class="fa fa-tag prefix grey-text"></i>
-              <input mdbInputDirective type="text" id="form32" class="form-control">
+              <input
+                mdbInputDirective
+                type="text"
+                id="form32"
+                class="form-control"
+              />
               <label for="form34">Temat</label>
             </div>
-  
+
             <div class="md-form">
               <i class="fa fa-pencil prefix grey-text"></i>
-              <textarea mdbInputDirective type="text" id="form8" class="md-textarea"></textarea>
+              <textarea
+                mdbInputDirective
+                type="text"
+                id="form8"
+                class="md-textarea"
+              ></textarea>
               <label for="form8">Wiadomość</label>
             </div>
-  
+
             <div class="text-center">
-              <button mdbBtn color="light-blue" class="waves-light" mdbWavesEffect>Wyślij</button>
+              <button
+                mdbBtn
+                color="light-blue"
+                class="waves-light"
+                mdbWavesEffect
+              >
+                Wyślij
+              </button>
             </div>
-  
           </mdb-card-body>
-  
         </mdb-card>
         <!--Form with header-->
-  
       </div>
       <!--Grid column-->
-  
+
       <!--Grid column-->
       <div class="col-lg-7 contact-right-col">
-  
-        <div class="z-depth-1 radius-25">
-            <div class="row adrress no-gutters">
-                <div class="col-lg-4 d-flex align-items-center justify-content-center">
-                  <!-- <a mdbBtn floating="true" color="blue" class="accent-1 waves-light" mdbWavesEffect> -->
-                    <div class="icon">
-                        <i class="fa fa-university" aria-hidden="true"></i>
-                    </div>
-                  <!-- </a> -->
-                </div>
-                <div class="col-lg-8">
-                    <h5>Politechnika Rzeszowska<br/>im. Ignacego Łukasiewicza</h5>
-                    <p>Wydział Elektrotechniki i Informatyki</p>
-                    <p>ul. W. Pola 2, 35-959 Rzeszów</p>
-                </div>
+        <div class="card radius-25">
+          <div class="row adrress no-gutters">
+            <div
+              class="col-lg-4 d-flex align-items-center justify-content-center"
+            >
+              <!-- <a mdbBtn floating="true" color="blue" class="accent-1 waves-light" mdbWavesEffect> -->
+              <div class="icon">
+                <i class="fa fa-university" aria-hidden="true"></i>
+              </div>
+              <!-- </a> -->
             </div>
-    
-            <agm-map class="map-container" style="height: 375px;" [latitude]="lat" [longitude]="lng" [zoom]="zoom">
-              <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-            </agm-map>
+            <div class="col-lg-8">
+              <h5>Politechnika Rzeszowska<br />im. Ignacego Łukasiewicza</h5>
+              <p>Wydział Elektrotechniki i Informatyki</p>
+              <p>ul. W. Pola 2, 35-959 Rzeszów</p>
+            </div>
+          </div>
+
+          <agm-map
+            class="map-container"
+            [latitude]="lat"
+            [longitude]="lng"
+            [zoom]="zoom"
+          >
+            <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+          </agm-map>
         </div>
-  
-        <br>
+
+        <!-- <br /> -->
         <!--Buttons-->
-  
       </div>
       <!--Grid column-->
-  
-        <!-- END page content start -->
-  
-      </div>
-      <div class="row text-center pt-4">
-        <h2>Kontakt w sprawach studiów</h2>
-      </div>
 
-      <div class="row text-center persons">
-          <div class="col-md-4">
-            <a mdbBtn floating="true" color="blue" class="icon accent-1 waves-light" mdbWavesEffect>
-              <i class="fa fa-user"></i>
-            </a>
-            <p class="name">mgr inż. <b>Renata Fularska</b></p>
-            <p><b>Kierownik Administracyjny Wydziału Elektrotechniki i Informatyki</b></p>
-            <p>Rekrutacja i zasady przyjęć.</p>
-            <p>Budynek A, pok. 104<br/>
-                Tel. +48 17 865 12 89<br/>
-                Fax. +48 17 854 20 88<br/>
-                E-mail: <a href="mailto:dwe@prz.edu.pl">dwe@prz.edu.pl</a></p>
-          </div>
-  
-          <div class="col-md-4">
-            <a mdbBtn floating="true" color="blue" class="icon accent-1 waves-light" mdbWavesEffect>
-              <i class="fa fa-user"></i>
-            </a>
-            <p class="name">mgr inż. <b>Beata Szczęsna</b></p>
-            <p><b>Starszy referent ds. toku studiów Wydziału Elektrotechniki i Informatyki</b></p>
-            <p>Rekrutacja i bieżąca obsługa studentów.</p>
-            <p>Budynek A, pok. 110<br/>
-                Tel. +48 17 865 12 32<br/>
-                Fax. +48 17 854 20 88<br/>
-                E-mail: <a href="mailto:bs@prz.edu.pl">bs@prz.edu.pl</a></p>
-          </div>
-  
-          <div class="col-md-4">
-            <a mdbBtn floating="true" color="blue" class="icon accent-1 waves-light" mdbWavesEffect>
-              <i class="fa fa-user"></i>
-            </a>
-            <p class="name">dr hab. inż. <b>Jan Prokop</b>, prof. PRz</p>
-            <p><b>Kierownik Studiów Podyplomowych "Technologie Internetowe"</b></p>
-            <p>Kontakt w zakresie planu studiów i programów przedmiotów.</p>
-            <p>Budynek B, pok. 101<br/>
-                Tel. +48 17 865 13 84<br/>
-                Fax. +48 17 854 20 88<br/>
-                E-mail: <a href="mailto:jprokop@prz.edu.pl">jprokop@prz.edu.pl</a></p>
-          </div>
-        </div>
-
+      <!-- END page content start -->
     </div>
   </div>
+</div>
 
-  <app-footer-banner [type]="'banner'"></app-footer-banner>
+<app-footer-banner [type]="'banner'"></app-footer-banner>
