--- a/src/app/sites/contact/contact.component.scss
+++ b/src/app/sites/contact/contact.component.scss
@@ -1,22 +1,27 @@
 .adrress {
-    padding: 2em 0 0 0;
-    background-color: rgba(255,255,255,1);
-    text-align: center;
-    margin: 0 0;
-    .icon {
-        font-size: 5em;
-        position: relative;
-        color: rgba(0, 0, 0, 0.35);
-        top: -15px;
-
-    }
+  padding: 2em 0 0 0;
+  background-color: rgba(255, 255, 255, 1);
+  text-align: center;
+  margin: 0 0;
+  .icon {
+    font-size: 5em;
+    position: relative;
+    color: rgba(0, 0, 0, 0.35);
+    top: -15px;
+  }
 }
 .contact-right-col {
-    margin-top: 1.25em;
+  margin-top: 1.25em;
+  .card {
+    height: 100%;
+    .map-container {
+      height: 100%;
+    }
+  }
 }
 @media (max-width: 575px) {
 }
-  
+
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
 }
@@ -27,59 +32,62 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .contact-right-col {
-        margin-top: 0;
-    }
-    .adrress {
-        padding: 2em 0 0 0;
-        background-color: rgba(255,255,255,1);
-        text-align: left;
-        margin: 0 0;
-        height: 192px;
-    }
+  .contact-right-col {
+    margin-top: 0;
+  }
+  .adrress {
+    padding: 2em 0 0 0;
+    background-color: rgba(255, 255, 255, 1);
+    text-align: left;
+    margin: 0 0;
+    height: 192px;
+  }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-    
 }
 
-
-.card {
-    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.02);
+#form-map {
+  /deep/ .card {
+    box-shadow: none;
+  }
+  .card {
+    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.1),
+      0 2px 5px 0 rgba(0, 0, 0, 0.1);
     .card-body {
-        padding: 2.5rem;
+      padding: 2.5rem;
     }
+  }
 }
 .form-header h3 {
-    padding: 0 0 0.5em 0;
+  padding: 0 0 0.5em 0;
 }
 .contact-right-col {
 }
 .radius-25 {
-    border-radius: 0.25rem;
+  border-radius: 0.25rem;
 }
 
 .persons {
-
-    p {
-        // text-align: left;
-        text-align: center;
-    }
-    .name {
-        font-size: 1.25em;
-    }
-    .icon {
-        margin: 3em 0;
-    }
+  p {
+    // text-align: left;
+    text-align: center;
+  }
+  .name {
+    font-size: 1.25em;
+  }
+  .icon {
+    margin: 3em 0;
+  }
 }
 
 .md-form .prefix {
-    position: absolute;
-    transition: color 0.2s;
-    width: 35px;
-    /* height: 26px; */
-    text-align: center;
-    color: rgba(0,0,0,0.45);
-    top: 0.28rem;
+  position: absolute;
+  transition: color 0.2s;
+  width: 35px;
+  /* height: 26px; */
+  text-align: center;
+  color: rgba(0, 0, 0, 0.45);
+  top: 0.28rem;
 }
