--- a/src/app/sites/organisation/organisation.component.scss
+++ b/src/app/sites/organisation/organisation.component.scss
@@ -1,24 +1,22 @@
 .img-100vw {
-    height: 20vh;
-    width: 100%;
-    
-    background-size: 100%;
+  height: 20vh;
+  width: 100%;
+
+  background-size: 100%;
 }
 
 @media (max-width: 575px) {
 }
-  
+
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-    
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-    .img-100vw {
-        height: 35vh;
-    }
-    
+  .img-100vw {
+    height: 35vh;
+  }
 }
 
 // Large devices (desktops, 992px and up)
@@ -27,29 +25,30 @@
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-    .img-100vw {
-        height: 50vh;
-        background-size: 100%;
-    }
+  .img-100vw {
+    height: 50vh;
+    background-size: 100%;
+  }
 }
 p {
-    width: 100%;
-    text-align: justify
+  width: 100%;
+  text-align: justify;
 }
-
 
 .org-1 {
-    background-image: url("https://images.pexels.com/photos/1391371/pexels-photo-1391371.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-image: url('https://images.unsplash.com/photo-1519452575417-564c1401ecc0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1024&q=25');
+  background-position: 50% 75%;
 }
 .org-2 {
-    background-image: url("https://images.unsplash.com/photo-1528879342222-323df0d65c9f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80");
+  background-image: url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1024&q=25');
+  background-position: 50% 75%;
 }
 .img-content {
-    padding: 2em 0;
+  padding: 2em 0;
 }
 .img-content .h-article {
-    padding-top: 0;
+  padding-top: 0;
 }
 .img-content-first {
-    padding-top: 1em;
+  padding-top: 1em;
 }
