--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,13 @@ $view-page-header-height: 22vh;
 html {
   //font-size: 100%;
 }
-h1, h2, h3, h4, h5, h6, .p-100 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.p-100 {
   width: 100%;
 }
 a {
@@ -28,6 +34,11 @@ a {
 }
 a:hover {
   color: black;
+}
+
+button:focus,
+li:focus {
+  outline: 0;
 }
 
 // body::-webkit-scrollbar       {background: transparent; width:16px}
@@ -66,7 +77,6 @@ a:hover {
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
   body {
-
   }
   .page-container {
     padding-top: 0 !important;
@@ -79,17 +89,15 @@ a:hover {
   .navbar-dark {
     background: linear-gradient(45deg, #45cafc, #303f9f) !important;
   }
-  .view-page-header .header-page {    
+  .view-page-header .header-page {
     // padding-top: 12vh;
     padding-left: 1em;
     font-size: 1.3em;
   }
-
 }
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-  
 }
 
 // Medium devices (tablets, 768px and up)
@@ -108,7 +116,7 @@ a:hover {
 
 @media (max-width: 991px) {
   .display-only {
-    display: none; 
+    display: none;
   }
 }
 
@@ -122,7 +130,7 @@ a:hover {
   }
   .view-page-header {
     // bg-img w #
-    background-image: url("https://images.unsplash.com/photo-1514996550219-62672472d03b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+    background-image: url('https://images.unsplash.com/photo-1514996550219-62672472d03b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
     background-position: 0% 50%;
     background-repeat: no-repeat;
     height: $view-page-header-height; // 27
@@ -135,7 +143,8 @@ a:hover {
     -webkit-animation-timing-function: ease-out;
     -webkit-animation-iteration-count: 1;
   }
-  .view-page-header .rgba-blue-strong, .view-page-header .rgba-blue-strong:after {
+  .view-page-header .rgba-blue-strong,
+  .view-page-header .rgba-blue-strong:after {
     -webkit-animation-name: LOADING-BG;
     -webkit-animation-duration: 1.5s;
     -webkit-animation-timing-function: ease-out;
@@ -146,11 +155,10 @@ a:hover {
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-
 }
 
-.navbar-collapse.show, .navbar-collapse.collapsing {
-
+.navbar-collapse.show,
+.navbar-collapse.collapsing {
 }
 
 .navbar {
@@ -172,8 +180,6 @@ a:hover {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
   background: linear-gradient(45deg, #45cafc, #303f9f) !important;
 }
-
-
 
 @-webkit-keyframes LOADING {
   0% {
@@ -199,7 +205,6 @@ a:hover {
   }
 }
 
-
 .view-admin-header {
   // bg-img w #
   //background-image: url("/assets/anders-jilden-478920-unsplash.jpg");
@@ -209,15 +214,13 @@ a:hover {
   background-attachment: fixed;
   background-size: cover;
   //background-color: #2196f3;
-  color: rgba(0,0,0,0.7);
-
+  color: rgba(0, 0, 0, 0.7);
 }
 .view-admin-header .header-page {
   padding-top: 11vh;
   font-size: 1.5em;
-  color: rgba(0,0,0,0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
-
 
 .view-page-header .container {
   padding-left: 0;
@@ -230,7 +233,8 @@ a:hover {
 }
 .view-page-100vh {
   height: 100vh;
-  background: #2196f3 url("/assets/rawpixel-678089-unsplash.jpg") no-repeat fixed;
+  background: #2196f3 url('/assets/rawpixel-678089-unsplash.jpg') no-repeat
+    fixed;
   background-size: cover;
 }
 .view-page-100vh .header-page {
@@ -242,23 +246,23 @@ a:hover {
 }
 
 .table thead tr {
-  background-color: rgba(0,0,0,0.03);
+  background-color: rgba(0, 0, 0, 0.03);
 }
 .tr-click {
   cursor: pointer;
 }
 .aqua-gradient {
-  background: -webkit-linear-gradient(50deg,#2096ff,#05ffa3)!important;
-  background: -o-linear-gradient(50deg,#2096ff,#05ffa3)!important;
-  background: linear-gradient(40deg,#2096ff,#05ffa3)!important;
+  background: -webkit-linear-gradient(50deg, #2096ff, #05ffa3) !important;
+  background: -o-linear-gradient(50deg, #2096ff, #05ffa3) !important;
+  background: linear-gradient(40deg, #2096ff, #05ffa3) !important;
 }
 .blue-gradient {
-  background: -webkit-linear-gradient(50deg,#45cafc,#303f9f)!important;
-  background: -o-linear-gradient(50deg,#45cafc,#303f9f)!important;
-  background: linear-gradient(40deg,#45cafc,#303f9f)!important;
+  background: -webkit-linear-gradient(50deg, #45cafc, #303f9f) !important;
+  background: -o-linear-gradient(50deg, #45cafc, #303f9f) !important;
+  background: linear-gradient(40deg, #45cafc, #303f9f) !important;
 }
 // .navbar {
-  
+
 // }
 .panel-nav .navbar {
   background: grey none !important;
@@ -266,12 +270,12 @@ a:hover {
 }
 .page-nav .navbar {
   background: #2196f3 none !important;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10) !important;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(0, 0, 0, 0.1) !important;
 }
 
 .ladowanie {
   text-align: center;
-  color: rgba(0,0,0,0.75);
+  color: rgba(0, 0, 0, 0.75);
 }
 .ladowanie i {
   margin: 0 5px;
@@ -290,7 +294,7 @@ a:hover {
 }
 .program-muted {
   margin-top: 2.5em;
-  background-color: rgba(0,0,0,0.02);
+  background-color: rgba(0, 0, 0, 0.02);
   width: 100%;
 }
 .blockquote p {
@@ -298,7 +302,7 @@ a:hover {
   font-size: 0.8em;
 }
 .program-muted p {
-  color: rgba(0,0,0,0.5);
+  color: rgba(0, 0, 0, 0.5);
 }
 .program-muted p.warn {
   font-weight: bold;
@@ -309,8 +313,9 @@ a:hover {
   border-radius: 10em;
 }
 .btn-floating {
-  -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
-  box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18),
+    0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   width: 47px;
   height: 47px;
   position: relative;
@@ -318,9 +323,9 @@ a:hover {
   vertical-align: middle;
   display: inline-block;
   overflow: hidden;
-  -webkit-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   margin: 10px;
   -webkit-border-radius: 50%;
   border-radius: 50%;
@@ -347,14 +352,14 @@ a:hover {
   text-align: center;
 }
 .page-container {
-  
 }
-ngb-modal-window, .modal-open .modal {
+ngb-modal-window,
+.modal-open .modal {
   overflow-y: auto;
 }
 .modal-open {
   overflow-y: hidden !important;
 }
 #toast-container > div {
-  opacity:1;
+  opacity: 1;
 }
